--- a/SpamBotRemaster/App.xaml
+++ b/SpamBotRemaster/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:SpamBotRemaster"
              StartupUri="/Views/Windows/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="Data/ResourseDictionaries/MainResourses.xaml"/>
     </Application.Resources>
 </Application>
