--- a/SpamBotRemaster/Views/Windows/MainWindow.xaml
+++ b/SpamBotRemaster/Views/Windows/MainWindow.xaml
@@ -9,6 +9,7 @@
         xmlns:dd="urn:gong-wpf-dragdrop"
         xmlns:converters="clr-namespace:SpamBotRemaster.Infrastructure.Converters"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:fa5="http://schemas.fontawesome.com/icons/"
         mc:Ignorable="d"
         Title="SpamBotRemake" 
         Icon="/Data/Images/icon.png"
@@ -33,8 +34,8 @@
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="5*"/>
-                <RowDefinition Height="38*"/>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="39*"/>
                 <RowDefinition Height="6*"/>
                 <RowDefinition Height="4*"/>
             </Grid.RowDefinitions>
@@ -45,20 +46,47 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Grid Column="2">
+
+
+            <Grid Grid.Row="0" Grid.Column="0">
+
+                <Grid.Background>
+                    <SolidColorBrush Color="{StaticResource TextBoxBgDarkColor}"/>
+                </Grid.Background>
+
+                <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="27" Width="27">
+                    <Grid.Background>
+                        <SolidColorBrush Color="{StaticResource TextBoxBgDarkColor}"/>
+                    </Grid.Background>
+
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="MouseLeftButtonUp">
+                            <i:InvokeCommandAction Command="{Binding OpenSettingsMenuCommand}" />
+                        </i:EventTrigger> 
+                    </i:Interaction.Triggers>
+
+                    <fa5:SvgAwesome  Icon="Solid_Cog" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource SvgAwesomeStyle}"/>
+                </Grid>
+                
+                
+            </Grid>
+
+            <Grid Grid.Row="0" Grid.Column="2">
 
                 <Grid.Background>
                     <SolidColorBrush Color="{StaticResource TextBoxBgDarkColor}"/>
                 </Grid.Background>
 
                 <TextBlock
-                 Foreground="White"
-                 HorizontalAlignment="Center" 
-                 VerticalAlignment="Center"
-                 FontFamily="Calibri" 
-                 FontSize="20" 
-                 Text="{Binding CountOfSentMessages, Mode=OneWay, Converter={StaticResource Intconverter}}"/>
+                    Foreground="White"
+                    HorizontalAlignment="Center" 
+                    VerticalAlignment="Center"
+                    FontFamily="Calibri" 
+                    FontSize="20" 
+                    Text="{Binding CountOfSentMessages, Mode=OneWay, Converter={StaticResource Intconverter}}"/>
+
             </Grid>
+
 
 
             <StackPanel Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="1" >
@@ -127,7 +155,8 @@
                     </Button.Background>
                 </Button>
 
-                <Button Grid.Column="1" Style="{StaticResource StopButtonStyle}" Content="{Binding EndSpamButtonText}" HorizontalAlignment="Right" Command="{Binding EndSpamCommand}">
+                
+                <Button Grid.Column="1" Style="{StaticResource StopButtonStyle}" Content="{Binding EndSpamButtonText}" HorizontalAlignment="Left" Command="{Binding EndSpamCommand}">
                     <Button.Background>
                         <SolidColorBrush Color="{StaticResource StopButtonColor}"/>
                     </Button.Background>
@@ -138,10 +167,10 @@
 
         
         <Grid>
-            <StackPanel Background="Black" Opacity="0.55" Visibility="{Binding IsSettingsMenuOpen, Converter={StaticResource BoolToVisibilityConverter}, Mode=TwoWay}">
+            <StackPanel Background="Black" Opacity="0.55" Visibility="{Binding IsSettingsMenuOpen, Converter={StaticResource BoolToVisibilityConverter}}">
                 <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="MouseLeftButtonDown">
-                        <i:ChangePropertyAction PropertyName="Visibility" Value="2"/>
+                    <i:EventTrigger EventName="MouseLeftButtonUp">
+                        <i:InvokeCommandAction Command="{Binding CloseSettingsMenuCommand}" />
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </StackPanel>
